cc_binary(
  name="leveldb_main",
  srcs = ["leveldb_main.cc"],
  deps = ["@com_google_leveldb//:leveldb"],
)

cc_binary(
  name="run_mock_client_main",
  srcs = ["run_mock_client_main.cc"],
  deps = [
    "@com_github_grpc_grpc//:grpc++",
    "@com_google_protobuf//:protobuf_lite",
    "//src/common/protocol_client:master_metadata_service_client",
  ],
)

cc_binary(
  name="system_logger_main",
  srcs = ["system_logger_main.cc"],
  deps = [
    "//src/common:system_logger",
  ],
)
