load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "leveldb_main",
    srcs = ["leveldb_main.cc"],
    deps = ["@com_google_leveldb//:leveldb"],
)

cc_binary(
    name = "parallel_hashmap_main",
    srcs = ["parallel_hashmap_main.cc"],
    deps = [
        "@com_google_absl//absl/synchronization",
        "@parallel_hashmap",
    ],
)

cc_binary(
    name = "run_mock_protocol_client_main",
    srcs = ["run_mock_protocol_client_main.cc"],
    data = ["//data:config.yml"],
    deps = [
        "//src/common:config_manager",
        "//src/common:system_logger",
        "//src/common/protocol_client:chunk_server_service_client",
        "//src/common/protocol_client:master_metadata_service_client",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_protobuf//:protobuf_lite",
    ],
)

cc_binary(
    name = "system_logger_main",
    srcs = ["system_logger_main.cc"],
    deps = [
        "//src/common:system_logger",
    ],
)

cc_binary(
    name = "config_manager_main",
    srcs = ["config_manager_main.cc"],
    data = ["//data:config.yml"],
    deps = [
        "//src/common:config_manager",
        "//src/common:system_logger",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
    ],
)
