load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "utils",
    srcs = ["utils.cc"],
    hdrs = ["utils.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/synchronization",  
        "@com_google_protobuf//:protobuf_lite",
        "@parallel_hashmap//:parallel_hashmap",
    ],
)

cc_library(
  name = "system_logger",
  srcs = ["system_logger.cc"],
  hdrs = ["system_logger.h"],
  visibility = ["//visibility:public"],
  deps = ["@com_google_glog//:glog"],
)
