load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
  name = "metadata_proto",
  visibility = ["//visibility:public"],
  srcs = ["metadata.proto"],
  deps = [":chunk_server_proto"],
)

cc_proto_library(
  name="cc_metadata_proto",
  visibility = ["//visibility:public"],
  deps=[":metadata_proto"],
)

proto_library(
  name = "chunk_server_proto",
  visibility = ["//visibility:public"],
  srcs = ["chunk_server.proto"],
)

cc_proto_library(
  name="cc_chunk_server_proto",
  visibility = ["//visibility:public"],
  deps = [":chunk_server_proto"],
)
