load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "metadata_proto",
    srcs = ["metadata.proto"],
    visibility = ["//visibility:public"],
    deps = [":chunk_server_proto"],
)

cc_proto_library(
    name = "cc_metadata_proto",
    visibility = ["//visibility:public"],
    deps = [":metadata_proto"],
)

proto_library(
    name = "chunk_server_proto",
    srcs = ["chunk_server.proto"],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "cc_chunk_server_proto",
    visibility = ["//visibility:public"],
    deps = [":chunk_server_proto"],
)
