load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "utils_test",
    srcs = ["utils_test.cc"],
    deps = [
        "//src/common:utils",
        "@com_google_test//:gtest_main",
    ],
)

cc_test(
    name = "config_manager_test",
    srcs = ["config_manager_test.cc"],
    data = ["config_manager_test_config.yml"],
    deps = [
        "//src/common:config_manager",
        "@com_google_test//:gtest_main",
    ],
)
