load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "master_metadata_service_client",
    srcs = ["master_metadata_service_client.cc"],
    hdrs = ["master_metadata_service_client.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/common:utils",
        "//src/protos/grpc:cc_master_metadata_service_grpc",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_protobuf//:protobuf_lite",
    ],
)

cc_library(
    name = "master_chunk_server_manager_service_client",
    srcs = ["master_chunk_server_manager_service_client.cc"],
    hdrs = ["master_chunk_server_manager_service_client.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/common:utils",
        "//src/protos/grpc:cc_master_chunk_server_manager_service_grpc",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_protobuf//:protobuf_lite",
    ],
)
