load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "grpc_client_utils",
    srcs = ["grpc_client_utils.cc"],
    hdrs = ["grpc_client_utils.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/common:config_manager",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

cc_library(
    name = "master_metadata_service_client",
    srcs = ["master_metadata_service_client.cc"],
    hdrs = ["master_metadata_service_client.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/common:utils",
        "//src/protos/grpc:cc_master_metadata_service_grpc",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_protobuf//:protobuf_lite",
    ],
)

cc_library(
    name = "master_chunk_server_manager_service_client",
    srcs = ["master_chunk_server_manager_service_client.cc"],
    hdrs = ["master_chunk_server_manager_service_client.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/common:utils",
        "//src/protos/grpc:cc_master_chunk_server_manager_service_grpc",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_protobuf//:protobuf_lite",
    ],
)

cc_library(
    name = "chunk_server_service_gfs_client",
    srcs = ["chunk_server_service_gfs_client.cc"],
    hdrs = ["chunk_server_service_gfs_client.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/common:utils",
        "//src/protos/grpc:cc_chunk_server_file_service_grpc",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_protobuf//:protobuf_lite",
    ],
)

cc_library(
    name = "chunk_server_service_server_client",
    srcs = ["chunk_server_service_server_client.cc"],
    hdrs = ["chunk_server_service_server_client.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/common:utils",
        "//src/protos/grpc:cc_chunk_server_file_service_grpc",
        "//src/protos/grpc:cc_chunk_server_lease_service_grpc",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_protobuf//:protobuf_lite",
    ],
)

cc_library(
    name = "chunk_server_control_service_client",
    srcs = ["chunk_server_control_service_client.cc"],
    hdrs = ["chunk_server_control_service_client.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/common:utils",
        "//src/protos/grpc:cc_chunk_server_control_service_grpc",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_protobuf//:protobuf_lite",
    ],
)
