load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

proto_library(
    name = "master_metadata_service_proto",
    srcs = ["master_metadata_service.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/protos:chunk_server_proto",
        "//src/protos:metadata_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)

cc_proto_library(
    name = "cc_master_metadata_service_proto",
    visibility = ["//visibility:public"],
    deps = [":master_metadata_service_proto"],
)

# Generates C++ gRPC classes for services defined in a proto file.
# See: https://github.com/grpc/grpc/blob/master/bazel/cc_grpc_library.bzl
cc_grpc_library(
    name = "cc_master_metadata_service_grpc",
    srcs = [":master_metadata_service_proto"],
    grpc_only = True,
    visibility = ["//visibility:public"],
    deps = [":cc_master_metadata_service_proto"],
)

proto_library(
    name = "chunk_server_lease_service_proto",
    srcs = ["chunk_server_lease_service.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:timestamp_proto",
    ],
)

cc_proto_library(
    name = "cc_chunk_server_lease_service_proto",
    visibility = ["//visibility:public"],
    deps = [":chunk_server_lease_service_proto"],
)

cc_grpc_library(
    name = "cc_chunk_server_lease_service_grpc",
    srcs = [":chunk_server_lease_service_proto"],
    grpc_only = True,
    visibility = ["//visibility:public"],
    deps = [":cc_chunk_server_lease_service_proto"],
)

proto_library(
    name = "chunk_server_file_service_proto",
    srcs = ["chunk_server_file_service.proto"],
    visibility = ["//visibility:public"],
    deps = ["//src/protos:chunk_server_proto"],
)

cc_proto_library(
    name = "cc_chunk_server_file_service_proto",
    visibility = ["//visibility:public"],
    deps = [":chunk_server_file_service_proto"],
)

cc_grpc_library(
    name = "cc_chunk_server_file_service_grpc",
    srcs = [":chunk_server_file_service_proto"],
    grpc_only = True,
    visibility = ["//visibility:public"],
    deps = [":cc_chunk_server_file_service_proto"],
)

proto_library(
    name = "master_chunk_server_manager_service_proto",
    srcs = ["master_chunk_server_manager_service.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/protos:chunk_server_proto",
    ],
)

cc_proto_library(
    name = "cc_master_chunk_server_manager_service_proto",
    visibility = ["//visibility:public"],
    deps = [":master_chunk_server_manager_service_proto"],
)

cc_grpc_library(
    name = "cc_master_chunk_server_manager_service_grpc",
    srcs = [":master_chunk_server_manager_service_proto"],
    grpc_only = True,
    visibility = ["//visibility:public"],
    deps = [":cc_master_chunk_server_manager_service_proto"],
)

proto_library(
    name = "chunk_server_control_service_proto",
    srcs = ["chunk_server_control_service.proto"],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "cc_chunk_server_control_service_proto",
    visibility = ["//visibility:public"],
    deps = [":chunk_server_control_service_proto"],
)

cc_grpc_library(
    name = "cc_chunk_server_control_service_grpc",
    srcs = [":chunk_server_control_service_proto"],
    grpc_only = True,
    visibility = ["//visibility:public"],
    deps = [":cc_chunk_server_control_service_proto"],
)
