load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "chunk_server_lease_service_impl",
    srcs = ["chunk_server_lease_service_impl.cc"],
    hdrs = ["chunk_server_lease_service_impl.h"],
    deps = [
        ":chunk_server_impl",
        "//src/common:system_logger",
        "//src/protos/grpc:cc_chunk_server_lease_service_grpc",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/time",
    ],
)

cc_library(
    name = "chunk_server_file_service_impl",
    srcs = ["chunk_server_file_service_impl.cc"],
    hdrs = ["chunk_server_file_service_impl.h"],
    deps = [
        ":chunk_server_impl",
        "//src/protos/grpc:cc_chunk_server_file_service_grpc",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

cc_library(
    name = "chunk_server_control_service_impl",
    srcs = ["chunk_server_control_service_impl.cc"],
    hdrs = ["chunk_server_control_service_impl.h"],
    deps = [
        ":chunk_server_impl",
        "//src/protos/grpc:cc_chunk_server_control_service_grpc",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

cc_binary(
    name = "run_chunk_server_main",
    srcs = ["run_chunk_server_main.cc"],
    data = ["//data:config.yml"],
    visibility = ["//visibility:public"],
    deps = [
        ":chunk_server_control_service_impl",
        ":chunk_server_file_service_impl",
        ":chunk_server_impl",
        ":chunk_server_lease_service_impl",
        "//src/common:config_manager",
        "//src/common:system_logger",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
    ],
)

cc_library(
    name = "chunk_server_impl",
    srcs = ["chunk_server_impl.cc"],
    hdrs = ["chunk_server_impl.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/common:config_manager",
        "//src/common:system_logger",
        "//src/common:utils",
        "//src/common/protocol_client:chunk_server_service_server_client",
        "//src/common/protocol_client:master_chunk_server_manager_service_client",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@com_google_protobuf//:protobuf_lite",
    ],
)
