load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = 'master_metadata_service_impl',
    srcs = ['master_metadata_service_impl.cc'],
    hdrs = ['master_metadata_service_impl.h'],
    deps = [
      "@com_github_grpc_grpc//:grpc++",
      "//src/protos/grpc:cc_master_metadata_service_grpc",
    ],
)
  
cc_library(
    name = 'lock_manager',
    srcs = ['lock_manager.cc'],
    hdrs = ['lock_manager.h'],
    visibility = ["//visibility:public"],
    deps = [
      "@com_google_absl//absl/container:flat_hash_map",
      "@com_google_absl//absl/synchronization",
    ]
)

cc_library(
  name = "chunk_server_manager",
  srcs = ["chunk_server_manager.cc"],
  hdrs = ["chunk_server_manager.h"],
  visibility = ["//visibility:public"],
  deps = [
    "//src/protos:cc_chunk_server_proto",
    "@com_google_absl//absl/container:flat_hash_map",
  ]
)

cc_binary(
    name = 'run_master_server_main',
    srcs = ['run_master_server_main.cc'],
    deps = [
      ":master_metadata_service_impl",
    ],
)
