load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "chunk_server_impl_test",
    srcs = ["chunk_server_impl_test.cc"],
    data = ["test_config.yml"],
    deps = [
        "//src/server/chunk_server:chunk_server_impl",
        "@com_google_absl//absl/time",
        "@com_google_protobuf//:protobuf_lite",
        "@com_google_test//:gtest_main",
    ],
)

cc_test(
    name = "chunk_server_lease_impl_test",
    srcs = ["chunk_server_lease_impl_test.cc"],
    data = ["test_config.yml"],
    deps = [
        "//src/common/protocol_client:chunk_server_service_server_client",
        "//src/protos/grpc:cc_chunk_server_lease_service_grpc",
        "//src/server/chunk_server:chunk_server_impl",
        "//src/server/chunk_server:chunk_server_lease_service_impl",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/time",
        "@com_google_protobuf//:protobuf_lite",
        "@com_google_test//:gtest_main",
    ],
)
